PERSO ENV 1/src/objects/Owner__c.object
<CustomObject>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>FirstName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerStatus__c</fullName>
        <label>OwnerStatus</label>
        <picklist>
            <picklistValues>
                <fullName>Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EmployeInterneRenault</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prestataire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mandataire</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Profession__c</fullName>
        <label>Profession</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Town__c</fullName>
        <label>Town</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZIPCode__c</fullName>
        <label>ZIPCode</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Owner</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Owner Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Owners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>